--- a/css/index.css
+++ b/css/index.css
@@ -58,6 +58,10 @@ body
 {
 	height: 52px;
 }
+.header span
+{
+	font-size: 16px;
+}
 
 .menu-collapse
 {
@@ -330,4 +334,62 @@ body
 	width: auto;
 	height: 100px;
 	object-fit: cover;
+}
+.tabs
+{
+	display: none;
+	margin-top: 50px;
+}
+
+.nav-item
+{
+	width: auto;
+}
+
+.tab-pane
+{
+	padding: 12px;
+}
+.tab-pane img
+{
+	width: 90%;
+	height: auto;
+	object-fit: cover;
+}
+@media(min-width: 560px)
+{
+	.nav-link
+	{
+		font-size: 16px;
+		padding: 15px 20px;
+	}
+}
+
+
+@media(max-width: 560px) and (min-width: 360px)
+{
+	.nav-link
+	{
+		font-size: 14px;
+		padding: 15px;
+	}
+}
+
+@media(max-width: 360px) and (min-width: 320px)
+{
+	.nav-link
+	{
+		font-size: 14px;
+		padding: 8px;
+	}
+}
+
+
+@media(max-width: 320px)
+{
+	.nav-link
+	{
+		font-size: 10px;
+		padding: 10px 6px;
+	}
 }
