--- a/css/index.css
+++ b/css/index.css
@@ -33,10 +33,19 @@ body
 .loading
 {
 	position: fixed;
+	width: 100%;
+	height: 100vh;	
+	display: block;
+	background: #fff;
+	z-index: 100;
+}
+.loading img
+{
+	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
-	display: block;
+	
 }
 .loader
 {
@@ -61,6 +70,36 @@ body
 .header span
 {
 	font-size: 16px;
+}
+.menu-icon
+{
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 50px;
+	height: 50px;
+	text-align: center;
+	padding: 10px 0;
+}
+.head--title
+{
+	position: absolute;
+	left: 50px;
+	top: 0;
+	width: calc(100% - 100px);
+	height: 50px;
+	text-align: center;
+	padding: 14px 0;
+}
+.helper-icon,.close-tab
+{
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 50px;
+	height: 50px;
+	text-align: center;
+	padding: 10px 0;
 }
 
 .menu-collapse
@@ -350,38 +389,17 @@ body
 {
 	padding: 12px;
 }
-.tab-pane img
+.tab-image
+{
+	display: block;
+	float: left;
+	width: 100%;
+}
+.tab-image img
 {
 	width: 90%;
 	height: auto;
 	object-fit: cover;
-}
-@media(min-width: 560px)
-{
-	.nav-link
-	{
-		font-size: 16px;
-		padding: 15px 20px;
-	}
-}
-
-
-@media(max-width: 560px) and (min-width: 360px)
-{
-	.nav-link
-	{
-		font-size: 14px;
-		padding: 15px;
-	}
-}
-
-@media(max-width: 360px) and (min-width: 320px)
-{
-	.nav-link
-	{
-		font-size: 14px;
-		padding: 8px;
-	}
 }
 
 
@@ -389,7 +407,7 @@ body
 {
 	.nav-link
 	{
-		font-size: 10px;
-		padding: 10px 6px;
+		font-size: 12px;
+		padding: 10px;
 	}
 }
