--- a/css/index.css
+++ b/css/index.css
@@ -278,7 +278,11 @@ body
 {
 	margin-top: 52px;
 }
-.categories .item
+.categories-w
+{
+	margin-top: 20px;
+}
+.categories .item,.categories-w .item
 {
 	height: 130px;
 	overflow: hidden;
@@ -296,7 +300,7 @@ body
 {
 	position: absolute;
 }
-.categories .item-name
+.categories .item-name,.categories-w .item-name
 {
 	position: absolute;
 	top: 50%;
@@ -308,7 +312,7 @@ body
 	font-size: 14px !important;
 }
 
-.categories .item-button
+.categories .item-button,.categories-w .item-button
 {
 	position: absolute;
 	bottom: 10px;
