--- a/css/index.css
+++ b/css/index.css
@@ -406,6 +406,35 @@ body
 	object-fit: cover;
 }
 
+.timer-bar
+{
+	position: relative;
+	display: block;
+	float: left;
+	width: 100%;
+	height: 50px;
+	padding: 0;
+	margin: 0;
+}
+.timer-percent
+{
+	display: block;
+	float: left;
+	
+	height: 50px;
+	padding: 0;
+	margin: 0;
+	z-index: 100;
+}
+.timer-txt
+{
+	position: absolute;
+	top: 17px;
+	width: 100%;
+	text-align: center;
+	font-size: 14px;
+	font-weight: 600;
+}
 
 @media(max-width: 320px)
 {
